# swarm

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  supervisord.conf
backend/: pyproject.toml  requests.http
backend/app/: main.py
backend/app/agents/: llm.py  orchestrator.py  scenarios.py  schemas.py  state.py  tool_loop.py
backend/app/agents/nodes/: await_decision.py  compliance.py  engineering.py  moderator.py  notify.py  post_decision.py  prepare.py  security.py  triage.py
backend/app/agents/prompts/: compliance.md  engineering.md  memory_update.md  moderator.md  security.md  triage.md
backend/app/agents/tools/: __init__.py  compliance_tools.py  engineering_tools.py  security_tools.py
backend/app/api/: conversations.py  decisions.py  events.py  history.py  memory.py  queue.py
backend/app/core/: config.py
backend/app/schemas/: conversations.py  events.py
backend/app/services/: conversation_builder.py  event_source.py  memory_store.py  store.py
backend/tests/: test_conversations.py  test_decisions.py  test_memory.py  test_orchestrator.py  test_queue.py  test_tool_agents.py  test_triage.py
docs/: Dockerfile  next.config.mjs  package-lock.json  package.json
docs/src/app/: layout.tsx  page.md
docs/src/components/: Hero.tsx  Logo.tsx
docs/src/lib/: navigation.ts
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ScenarioPanel.tsx
frontend/src/data/: mockData.ts
frontend/src/hooks/: useConversation.ts  useConversations.ts  useDecision.ts  useSSE.ts  (+1 more)
(+44 files in other folders)
